Fix misaligned wall of shame

--- a/_sass/chart.scss
+++ b/_sass/chart.scss
@@ -3,13 +3,13 @@
     min-height: 204px;
 }
 .search {
-    width: 170px;
+    width: 157px;
     text-align: right;
     padding-right: 10px;
 }
 .searchResult {
     display: inline-block;
-    width: 620px;
+    // width: 620px;
     white-space: nowrap;
     text-overflow: ellipsis;
     overflow: hidden;
